work area / kanban / notifications

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,12 @@ DB_PORT=5432
 DB_NAME=taskflow
 DB_USER=postgres
 DB_PASSWORD=password
+
+# Email Configuration (Gmail)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=seu-email@gmail.com
+EMAIL_PASS=sua-senha-de-app-16-caracteres
+EMAIL_FROM_NAME=TaskFlow
+EMAIL_FROM_ADDRESS=seu-email@gmail.com
