--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.9",
     "pg": "^8.16.3"
   },
   "devDependencies": {
